// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePickerBody should be rendered with maximum props 1`] = `
<DocumentFragment>
  <div
    class="root uui-timepicker-container"
  >
    <div
      class="ltrAlways"
    >
      <div
        class="uui-timepicker-item"
      >
        <div
          aria-label="Increment hours"
          class="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
        >
          <svg
            class=""
            height="18"
            width="18"
          />
        </div>
        <div
          class="container uui-input-box -clickable uui-timepicker-input"
          tabindex="-1"
        >
          <input
            class="uui-input uui-value-in-placeholder"
            inputmode="numeric"
            max="12"
            min="1"
            placeholder="12"
            tabindex="0"
            type="number"
            value=""
          />
          <div
            class="uui-numeric-input-button-group"
          >
            <div
              class="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
              role="button"
            />
            <div
              class="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
              role="button"
            />
          </div>
        </div>
        <div
          aria-label="Decrement hours"
          class="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
        >
          <svg
            class=""
            height="18"
            width="18"
          />
        </div>
      </div>
      <div
        class="uui-timepicker-item"
      >
        <div
          aria-label="Increment minutes"
          class="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
        >
          <svg
            class=""
            height="18"
            width="18"
          />
        </div>
        <div
          class="container uui-input-box -clickable uui-timepicker-input"
          tabindex="-1"
        >
          <input
            class="uui-input uui-value-in-placeholder"
            inputmode="numeric"
            max="59"
            min="0"
            placeholder="30"
            tabindex="0"
            type="number"
            value=""
          />
          <div
            class="uui-numeric-input-button-group"
          >
            <div
              class="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
              role="button"
            />
            <div
              class="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
              role="button"
            />
          </div>
        </div>
        <div
          aria-label="Decrement minutes"
          class="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
        >
          <svg
            class=""
            height="18"
            width="18"
          />
        </div>
      </div>
    </div>
    <div
      class="uui-timepicker-item"
    >
      <div
        class="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
      >
        <svg
          class=""
          height="18"
          width="18"
        />
      </div>
      <div
        class="container uui-input-box uui-readonly uui-timepicker-input"
        tabindex="-1"
      >
        <input
          class="uui-input"
          readonly=""
          tabindex="-1"
          type="text"
          value="PM"
        />
      </div>
      <div
        class="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
      >
        <svg
          class=""
          height="18"
          width="18"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TimePickerBody should be rendered with minimum props 1`] = `
<DocumentFragment>
  <div
    class="root uui-timepicker-container"
  >
    <div
      class="ltrAlways"
    >
      <div
        class="uui-timepicker-item"
      >
        <div
          aria-label="Increment hours"
          class="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
        >
          <svg
            class=""
            height="18"
            width="18"
          />
        </div>
        <div
          class="container uui-input-box -clickable uui-timepicker-input"
          tabindex="-1"
        >
          <input
            class="uui-input uui-value-in-placeholder"
            inputmode="numeric"
            max="12"
            min="0"
            placeholder="12"
            tabindex="0"
            type="number"
            value=""
          />
          <div
            class="uui-numeric-input-button-group"
          >
            <div
              class="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
              role="button"
            />
            <div
              class="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
              role="button"
            />
          </div>
        </div>
        <div
          aria-label="Decrement hours"
          class="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
        >
          <svg
            class=""
            height="18"
            width="18"
          />
        </div>
      </div>
      <div
        class="uui-timepicker-item"
      >
        <div
          aria-label="Increment minutes"
          class="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
        >
          <svg
            class=""
            height="18"
            width="18"
          />
        </div>
        <div
          class="container uui-input-box -clickable uui-timepicker-input"
          tabindex="-1"
        >
          <input
            class="uui-input uui-value-in-placeholder"
            inputmode="numeric"
            max="59"
            min="0"
            placeholder="30"
            tabindex="0"
            type="number"
            value=""
          />
          <div
            class="uui-numeric-input-button-group"
          >
            <div
              class="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
              role="button"
            />
            <div
              class="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
              role="button"
            />
          </div>
        </div>
        <div
          aria-label="Decrement minutes"
          class="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
        >
          <svg
            class=""
            height="18"
            width="18"
          />
        </div>
      </div>
    </div>
    <div
      class="uui-timepicker-item"
    >
      <div
        class="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
      >
        <svg
          class=""
          height="18"
          width="18"
        />
      </div>
      <div
        class="container uui-input-box uui-readonly uui-timepicker-input"
        tabindex="-1"
      >
        <input
          class="uui-input"
          readonly=""
          tabindex="-1"
          type="text"
          value="PM"
        />
      </div>
      <div
        class="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
      >
        <svg
          class=""
          height="18"
          width="18"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
